# ShadowScribe2.0

./: .dockerignore  .gitignore  CHARACTER_EXTRACTION_STRATEGY.md  CLAUDE.md  DESIGN_CENTRAL_PROMPT_SYSTEM.md  DESIGN_LOCAL_ROUTER_DECISION_MODEL.md  DNDBEYONDEXAMPLE.json  DNDBEYONDEXAMPLE_actions_parsed.json  DNDBEYONDEXAMPLE_background_personality_parsed.json  DNDBEYONDEXAMPLE_core_character_parsed.json  LICENSE  LLM_CHARACTER_EXTRACTION_SYSTEM.md  README.md  RulebookImplementation.md  RulebookIntentions.md  SessionNotes.md  TASKS.md  TESTING_GUIDE.md  TESTING_WIZARD.md  TODO.txt  Tasks.md  character-questions.md  character_extraction_results.txt  character_query_test_questions.md  context.txt  debug_entity_matching.py  debug_tool_selector.py  demo_central_engine.py  dnd5rulebook_headers.txt  dndbeyond_structure_map.json  docker-compose.yml  extraction_poc_summary.md  filtered_character.json  main.py  manage.py  parse_actions.py  parse_background_personality.py  parse_core_character.py  parse_dndbeyond_features.py  parse_spelllist.py  (+11 more)
574-Assignment/: IMPLEMENTATION_SUMMARY.md  MIGRATION_TO_UV.md  MODEL_ARCHITECTURE.md  PLAN.md  README.md  REPORT.md  config.py  pyproject.toml  requirements.txt  setup.bat  setup.sh
574-Assignment/data/: augmentation.py
574-Assignment/docs/: MODEL_ARCHITECTURE.md
574-Assignment/embeddings/: qwen_metadata.pkl
574-Assignment/evaluation/: __init__.py  evaluator.py  metrics.py
574-Assignment/ground_truth/: test_questions.json
574-Assignment/implementations/: __init__.py  base_rag.py  system1_openai_inmemory.py  (+1 more)
api/: Dockerfile  (+2 more)
(+285 files in other folders)
